top_controller追加/posts_destroy設定

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,6 +46,8 @@
         <% @post.each do |post| %>
           <div class="right-page-day">
             <%= post.created_at.to_s(:datetime_jp) %>
+              <%= link_to "編集", edit_post_path(post.id), class: "left-page-day"%>
+              <%= link_to "削除", post_path(post.id), method: :DELETE, class: "left-page-day"%>
           </div>
           <div class="right-page-title">
             <%= post.title %>
