post_new_view修正

--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -23,9 +23,10 @@
   display: flex;
   margin-left: 15vw;
   margin-right: 10vw;
+  padding-bottom: 100px
 }
 .left-page {
-  background-color:#EEFFFF;
+  // background-color:#EEFFFF;
   width: 20vw;
   font-size: 25px;
 }
@@ -69,7 +70,7 @@
 }
 
 .right-page {
-  background-color: #FFFFEE;
+  // background-color: #FFFFEE;
   width: 55vw;
   font-family: "Arial", "メイリオ";
   padding: 0 50px;
