--- a/app/assets/stylesheets/shared/footer.css
+++ b/app/assets/stylesheets/shared/footer.css
@@ -1,8 +1,10 @@
 .footer {
-  width: 100vw;
-  padding: 5vh 0;
-  background-color: #272727;
+  clear:both;
+  height: 100px;
   text-align: center;
+  padding: 30px 0;
+  font-size: 20px;
+  background-color: #272727;
 }
 
 .footer-contents {
@@ -11,7 +13,6 @@
 }
 
 .footer-content-head {
-  font-size: 20px;
   font-weight: bold;
   margin: 0 4vw;
   color: #FFF;
