--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,33 @@
-<h1>New Article</h1>
-<%= form_with model: @post,  local: true do |f| %>
+<%= render "shared/header" %>
 
-  <p>
-    <%= f.file_field :image, id:"item-image" %>
-  </p>
+<%= render "shared/my_image" %>
 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+<div class="new-post">
+  <h1>日記を書く</h1>
+  <%= form_with model: @post,  local: true do |f| %>
 
-  <p>
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </p>
+    <div class="new-post-archive">
+      <div class= "new-post-image">
+        <p>写真</p>
+        <%= f.file_field :image %>
+      </div>
 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+      <div class= "new-post-title">
+        <p>タイトル</p>
+        <%= f.text_field :title %>
+      </div>
+
+      <div class= "new-post-content">
+        <p>日記</p>
+        <%= f.text_area :content, placeholder: "1000文字まで" %>
+      </div>
+
+      <div class= "new-post-submit">
+        <%= f.submit "日記を投稿する" %>
+        <%= link_to 'もどる', posts_path %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<%= render "shared/footer"%>
