--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+<%= render "shared/header" %>
+
+<%= render "shared/my_image" %>
+
 <h1>New Article</h1>
 <%= form_with model: @post,  local: true do |f| %>
 
@@ -19,3 +23,5 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<%= render "shared/footer"%>
