--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -1,30 +1,100 @@
 .new-post {
-  text-align: center;
   font-size: 30px;
-  padding-top: 20px;
+  padding: 60px;
   padding-bottom: 50px;
+  margin: 50px 300px;
   background-color: azure;
+}
+.new-post-dialy {
+  border-bottom: 1px solid rgb(190, 189, 189);
+  margin-left: 260px;
+  padding-bottom: 5px;
+  display: inline-block;
+  font-family: "Hannotate SC";
+  text-align: center;
 }
 
 .new-post-archive {
-  padding: 50px;
+  padding: 50px 0;
+  font-family: 'Hiragino Maru Gothic ProN';
 }
 .new-post-image {
   font-size: 20px;
-  padding: 20px;
+  padding-bottom: 80px;
+  position: relative;
+}
+.post-image {
+  padding-top: 10px;
+  position: absolute;
+}
+.new-post-title {
+  font-size: 20px;
+  padding-bottom: 40px;
+}
+input.post-title {
+  resize: none;
+  width:48vw;
+  margin-top: 10px;
+  padding: 5px;
+  border-left:0px;
+  border-top:0px;
+  border-right:0px;
+  border-bottom:1px;
+  border: solid 1px #cccccc;
+  border-radius: 8px;
+}
+input.post-title:focus {
+  border-radius: 8px;
+  box-shadow: 0 0 3px 0 #0099ff;
+  outline: 0;
+}
+.new-post-content {
+  font-size: 20px;
+  padding-bottom: 40px;
+}
+.post-content {
+  margin-top: 10px;
+  padding: 5px;
+}
+.new-post-submit {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.new-post-btn {
+  color: white;
+  width: 160px;
+  background-color:#3366ff;
+  padding: 10px;
+  border-radius: 15px;
+  margin-left: 260px;
+  margin-bottom: 20px;
+  border:none;
+}
+.new-post-return {
+  text-align: center;
+  color: #003399;
+  border-radius: 30px;
+}
+
+textarea {
+  resize: none;
+  width:48vw;
+  height:600px;
+  border-color: #FFFFFF;
+  border: solid 1px #cccccc;
+  border-radius: 8px;
+}
+textarea:focus {
+  border-radius: 8px;
+  box-shadow: 0 0 3px 0 #0099ff;
+  outline: 0;
 }
 .input[type="text"]{
   width: 100%;
   height: 20px;
   font-size: 14px;
 }
-.new-post-title {
-  font-size: 20px;
-}
-.new-post-content {
-  font-size: 20px;
-}
-
-.new-post-submit {
-  font-size: 20px;
+.input textarea select{
+  padding: 5px;
 }
