--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -86,7 +86,7 @@
   font-family: "Times New Roman";
 }
 .right-page-title {
-  font-size: 40px;
+  font-size: 25px;
   font-family: "ヒラギノ角ゴ Pro W3";
   border-bottom: 1px solid #e3e3e3;
   margin-bottom: 30px;
@@ -103,9 +103,8 @@
   font-family: "Times New Roman";
 }
 .right-page-content {
-  font-size: 30px;
+  font-size: 20px;
   font-family: "ヒラギノ角ゴ Pro W3";
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 60px 30px 0;
   line-height: 35px;
 }
