--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -91,6 +91,7 @@
   border-bottom: 1px solid #e3e3e3;
   margin-bottom: 30px;
   width: 600px;
+  word-wrap: break-word;
 }
 .right-page-day {
   font-size: 20px;
@@ -107,4 +108,5 @@
   font-family: "ヒラギノ角ゴ Pro W3";
   padding: 30px 60px 30px 0;
   line-height: 35px;
+  word-wrap: break-word;
 }
