--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
 
   <%= form_with model: @post,  local: true do |f| %>
 
-    <div class="new-post-archive">
+    <div class="edit-post-archive">
       <div class= "new-post-image">
         <p>写真</p>
         <%= f.file_field :image, class: "post-image" %>
@@ -25,7 +25,7 @@
 
       <div class= "new-post-submit">
         <%= f.submit "日記を編集する", class: "new-post-btn" %>
-          <%= link_to '日記の一覧へもどる', posts_path, class: "new-post-return" %>
+          <%= link_to '日記の一覧へもどる', posts_path, class: "edit-post-return" %>
       </div>
     </div>
   <% end %>
