--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,6 +12,7 @@
         <p>写真</p>
         <%= f.file_field :image, class: "post-image" %>
       </div>
+      <div id="image-list"></div>
 
       <div class= "new-post-title">
         <p>タイトル</p>
