--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
   <div class="right-header">
     <div class="header-button">
       <% if user_signed_in? %>
-        <%= link_to current_user.name, posts_path, class: "user-nickname", class: 'header-content' %>
+        <%= link_to "日記帳へ", posts_path, class: "user-nickname", class: 'header-content' %>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header-content' %>
       <% else %>
         <%= link_to  "新規登録", new_user_registration_path, class: 'header-content' %>
