--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -110,3 +110,11 @@
   line-height: 35px;
   word-wrap: break-word;
 }
+
+.to-top {
+  text-align: center;
+  margin: 0 30px 50px;
+}
+.bottom-to-top {
+  font-size: 20px;
+}
