--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -21,7 +21,7 @@
 
 .header-title-name {
   position: absolute;
-  top: 10%;
+  top: 10px;
   left: 120%;
   color: #6594e0;
   font-family: sans-serif;
