--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,6 +17,19 @@
     </div>
     <div class="left-page-bottom">
       <div class="left-page-calendar">
+        <h1>カレンダー</h1>
+          <div id="calendar">
+          </div>
+      </div>
+      <div class="left-page-archive">
+        <p></p>
+      </div>
+      <div class="left-page-tag">
+        <p></p>
+      </div>
+      <div class="left-page-category">
+        <p></p>
+      </div>
     </div>
   </div>
 
